--- a/private/admin.html
+++ b/private/admin.html
@@ -7,16 +7,21 @@
   <style>
     :root {
       color-scheme: dark;
-      --bg: #0b101e;
-      --panel: rgba(20, 24, 36, 0.94);
-      --panel-alt: rgba(32, 37, 56, 0.9);
-      --border: rgba(90, 120, 230, 0.26);
-      --accent: #5c7cf0;
-      --accent-soft: rgba(92, 124, 240, 0.16);
-      --text: #f2f3fd;
-      --muted: rgba(242, 243, 253, 0.65);
-      --danger: #f26b6b;
-      --success: #63f2a6;
+      --bg: #0d1424;
+      --bg-soft: rgba(16, 23, 40, 0.84);
+      --panel: rgba(22, 30, 52, 0.92);
+      --panel-strong: rgba(14, 21, 38, 0.92);
+      --border: rgba(91, 116, 217, 0.28);
+      --accent: #6d8dff;
+      --accent-soft: rgba(109, 141, 255, 0.16);
+      --text: #f5f7ff;
+      --muted: rgba(245, 247, 255, 0.7);
+      --danger: #ff6f76;
+      --success: #65f5b2;
+      --radius-lg: 24px;
+      --radius-md: 18px;
+      --radius-sm: 12px;
+      --shadow-soft: 0 30px 80px rgba(3, 8, 22, 0.6);
     }
 
     * {
@@ -25,46 +30,53 @@
 
     body {
       margin: 0;
-      padding: 32px 24px 64px;
       min-height: 100vh;
+      padding: 40px 20px 64px;
       font-family: "Inter", "Segoe UI", Tahoma, Geneva, Verdana, sans-serif;
-      background:
-        radial-gradient(circle at 14% 18%, rgba(92, 124, 240, 0.22), transparent 58%),
-        radial-gradient(circle at 82% 14%, rgba(18, 22, 36, 0.72), transparent 62%),
-        linear-gradient(135deg, #05070f 0%, var(--bg) 48%, #04060d 100%);
+      background: radial-gradient(circle at 20% 16%, rgba(109, 141, 255, 0.18), transparent 54%),
+        radial-gradient(circle at 80% 12%, rgba(101, 245, 178, 0.12), transparent 60%),
+        linear-gradient(160deg, #050915, var(--bg) 64%, #050915);
       color: var(--text);
-      display: grid;
-      grid-template-columns: minmax(0, 1fr);
-      justify-items: center;
-      gap: 18px;
+      display: flex;
+      justify-content: center;
     }
 
-    body > header,
-    body > main {
-      width: min(1080px, 100%);
+    body::before {
+      content: "";
+      position: fixed;
+      inset: 0;
+      background: linear-gradient(130deg, rgba(109, 141, 255, 0.08), transparent 55%),
+        radial-gradient(circle at 16% 72%, rgba(101, 245, 178, 0.08), transparent 60%);
+      pointer-events: none;
+      z-index: -1;
+    }
+
+    .layout {
+      width: min(1280px, 100%);
+      display: flex;
+      flex-direction: column;
+      gap: 28px;
     }
 
     header {
       position: relative;
-      overflow: hidden;
+      background: linear-gradient(145deg, rgba(25, 32, 55, 0.94), rgba(15, 21, 36, 0.88));
+      border: 1px solid var(--border);
+      border-radius: var(--radius-lg);
+      padding: 28px 32px 32px;
+      box-shadow: var(--shadow-soft);
       display: flex;
       flex-direction: column;
-      gap: 18px;
-      padding: 28px;
-      border-radius: 22px;
-      background: linear-gradient(155deg, rgba(92, 124, 240, 0.28), rgba(20, 24, 36, 0.96));
-      border: 1px solid var(--border);
-      box-shadow: 0 28px 60px rgba(4, 8, 20, 0.5);
+      gap: 22px;
     }
 
     header::before {
       content: "";
       position: absolute;
       inset: 0;
-      background:
-        radial-gradient(circle at 16% 22%, rgba(99, 242, 166, 0.2), transparent 60%),
-        radial-gradient(circle at 86% 12%, rgba(92, 124, 240, 0.28), transparent 64%);
-      filter: blur(14px);
+      border-radius: var(--radius-lg);
+      background: linear-gradient(210deg, rgba(109, 141, 255, 0.16), rgba(101, 245, 178, 0.06));
+      opacity: 0.45;
       pointer-events: none;
     }
 
@@ -75,15 +87,15 @@
 
     h1 {
       margin: 0;
-      font-size: 1.9rem;
+      font-size: clamp(1.7rem, 2.4vw, 2.1rem);
       letter-spacing: 0.08em;
       text-transform: uppercase;
     }
 
     #messageBox {
       min-height: 22px;
-      font-size: 0.9rem;
-      font-weight: 600;
+      font-size: 0.92rem;
+      font-weight: 550;
       color: var(--success);
     }
 
@@ -93,116 +105,129 @@
 
     #navLinks {
       display: flex;
-      align-items: center;
       flex-wrap: wrap;
-      gap: 10px;
+      gap: 12px;
     }
 
     #navLinks a {
       display: inline-flex;
       align-items: center;
-      gap: 6px;
-      padding: 6px 14px;
+      gap: 8px;
+      padding: 10px 18px;
       border-radius: 999px;
       font-size: 0.78rem;
-      letter-spacing: 0.06em;
+      letter-spacing: 0.08em;
       text-transform: uppercase;
       text-decoration: none;
       color: var(--text);
       background: var(--accent-soft);
-      border: 1px solid rgba(92, 124, 240, 0.3);
-      transition: background 0.2s ease, border 0.2s ease, transform 0.2s ease;
+      border: 1px solid rgba(109, 141, 255, 0.2);
+      transition: transform 0.18s ease, background 0.18s ease;
     }
 
     #navLinks a:hover {
-      background: rgba(92, 124, 240, 0.3);
-      border-color: rgba(92, 124, 240, 0.5);
       transform: translateY(-1px);
+      background: rgba(109, 141, 255, 0.24);
     }
 
     .status-board {
       display: grid;
-      grid-template-columns: repeat(auto-fit, minmax(180px, 1fr));
-      gap: 12px;
+      grid-template-columns: repeat(auto-fit, minmax(190px, 1fr));
+      gap: 16px;
     }
 
     .status-card {
-      background: linear-gradient(165deg, rgba(32, 37, 56, 0.94), rgba(16, 20, 33, 0.88));
-      border-radius: 16px;
-      padding: 14px;
+      background: rgba(18, 25, 44, 0.92);
+      border: 1px solid rgba(109, 141, 255, 0.2);
+      border-radius: var(--radius-md);
+      padding: 16px 18px;
       display: flex;
       flex-direction: column;
       gap: 6px;
-      border: 1px solid var(--border);
-      box-shadow: inset 0 1px 0 rgba(255, 255, 255, 0.05);
+      box-shadow: inset 0 1px 0 rgba(250, 252, 255, 0.04);
     }
 
     .status-card span {
-      font-size: 0.74rem;
-      letter-spacing: 0.06em;
+      font-size: 0.72rem;
+      letter-spacing: 0.14em;
       text-transform: uppercase;
       color: var(--muted);
     }
 
     .status-card strong {
-      font-size: 1.1rem;
+      font-size: clamp(1.1rem, 2vw, 1.35rem);
     }
 
     main {
       display: grid;
-      grid-template-columns: repeat(auto-fit, minmax(320px, 1fr));
-      gap: 20px;
+      grid-template-columns: repeat(auto-fit, minmax(340px, 1fr));
+      gap: 24px;
     }
 
     section {
       position: relative;
-      padding: 24px;
-      border-radius: 20px;
+      display: flex;
+      flex-direction: column;
+      gap: 18px;
+      padding: 24px 24px 28px;
+      border-radius: var(--radius-lg);
       border: 1px solid var(--border);
-      background: linear-gradient(185deg, rgba(20, 24, 36, 0.95), rgba(10, 14, 24, 0.9));
-      box-shadow: 0 22px 48px rgba(4, 8, 20, 0.45);
+      background: linear-gradient(160deg, var(--panel), var(--panel-strong));
+      box-shadow: 0 18px 50px rgba(5, 10, 30, 0.55);
       backdrop-filter: blur(12px);
     }
 
     section::before {
       content: "";
       position: absolute;
-      inset: 0;
-      border-radius: 20px;
-      background: radial-gradient(circle at 18% 18%, rgba(92, 124, 240, 0.14), transparent 62%);
+      inset: 1px;
+      border-radius: calc(var(--radius-lg) - 1px);
+      background: radial-gradient(circle at 14% 20%, rgba(109, 141, 255, 0.14), transparent 64%);
       pointer-events: none;
+      opacity: 0.7;
+    }
+
+    section > * {
+      position: relative;
+      z-index: 1;
     }
 
     section h2 {
-      margin: 0 0 18px;
-      font-size: 1.18rem;
-      letter-spacing: 0.08em;
+      margin: 0;
+      font-size: clamp(1.05rem, 1.8vw, 1.2rem);
+      letter-spacing: 0.12em;
       text-transform: uppercase;
       color: var(--muted);
+    }
+
+    .table-wrapper {
+      border-radius: var(--radius-md);
+      border: 1px solid rgba(109, 141, 255, 0.08);
+      background: rgba(10, 15, 28, 0.6);
+      overflow: hidden;
+      overflow-x: auto;
+      box-shadow: inset 0 1px 0 rgba(255, 255, 255, 0.04);
     }
 
     table {
       width: 100%;
       border-collapse: collapse;
-      border-radius: 16px;
-      overflow: hidden;
-      background: linear-gradient(175deg, rgba(32, 37, 56, 0.94), rgba(16, 20, 33, 0.88));
-      border: 1px solid rgba(92, 124, 240, 0.22);
+      min-width: 520px;
     }
 
     thead {
-      background: rgba(92, 124, 240, 0.14);
+      background: rgba(109, 141, 255, 0.12);
       text-transform: uppercase;
-      letter-spacing: 0.08em;
+      letter-spacing: 0.12em;
       font-size: 0.72rem;
       color: var(--muted);
     }
 
     th,
     td {
-      padding: 13px 16px;
+      padding: 14px 18px;
       text-align: left;
-      border-bottom: 1px solid rgba(255, 255, 255, 0.05);
+      border-bottom: 1px solid rgba(255, 255, 255, 0.06);
     }
 
     tbody tr:last-child td {
@@ -210,78 +235,82 @@
     }
 
     tbody tr:hover {
-      background: linear-gradient(90deg, rgba(92, 124, 240, 0.12), rgba(92, 124, 240, 0.05));
+      background: rgba(109, 141, 255, 0.08);
     }
 
     button {
-      padding: 8px 16px;
-      border-radius: 12px;
-      border: 1px solid rgba(255, 255, 255, 0.12);
-      background: transparent;
+      padding: 9px 18px;
+      border-radius: var(--radius-sm);
+      border: 1px solid transparent;
+      background: rgba(109, 141, 255, 0.14);
       color: var(--text);
       font-weight: 600;
-      letter-spacing: 0.05em;
+      letter-spacing: 0.08em;
       text-transform: uppercase;
       cursor: pointer;
-      transition: background 0.2s ease, border 0.2s ease, transform 0.2s ease;
+      transition: transform 0.18s ease, background 0.18s ease, border 0.18s ease;
     }
 
     button:hover {
-      background: rgba(92, 124, 240, 0.2);
-      border-color: rgba(92, 124, 240, 0.45);
       transform: translateY(-1px);
+      background: rgba(109, 141, 255, 0.2);
+      border-color: rgba(109, 141, 255, 0.4);
     }
 
     button.secondary {
-      border-color: rgba(92, 124, 240, 0.4);
+      background: rgba(255, 255, 255, 0.06);
+      border-color: rgba(109, 141, 255, 0.3);
       color: var(--accent);
     }
 
     button.danger {
-      border-color: rgba(242, 107, 107, 0.35);
+      background: rgba(255, 111, 118, 0.14);
+      border-color: rgba(255, 111, 118, 0.28);
       color: var(--danger);
     }
 
     form {
-      margin-top: 18px;
       display: grid;
-      grid-template-columns: repeat(auto-fit, minmax(180px, 1fr));
-      gap: 14px;
+      grid-template-columns: repeat(auto-fit, minmax(200px, 1fr));
+      gap: 16px;
+      align-items: end;
     }
 
     label {
-      display: block;
+      display: flex;
+      flex-direction: column;
+      gap: 6px;
       font-size: 0.75rem;
-      letter-spacing: 0.06em;
+      letter-spacing: 0.12em;
       text-transform: uppercase;
       color: var(--muted);
     }
 
     input {
       width: 100%;
-      margin-top: 6px;
-      padding: 11px 12px;
-      border-radius: 12px;
-      border: 1px solid rgba(255, 255, 255, 0.14);
-      background: rgba(10, 12, 20, 0.72);
+      padding: 12px;
+      border-radius: var(--radius-sm);
+      border: 1px solid rgba(255, 255, 255, 0.08);
+      background: rgba(10, 15, 28, 0.64);
       color: var(--text);
-      font-size: 0.96rem;
+      font-size: 0.95rem;
+      transition: border 0.18s ease, box-shadow 0.18s ease;
     }
 
     input:focus {
       outline: none;
-      border-color: rgba(92, 124, 240, 0.55);
-      box-shadow: 0 0 0 2px rgba(92, 124, 240, 0.18);
+      border-color: rgba(109, 141, 255, 0.6);
+      box-shadow: 0 0 0 3px rgba(109, 141, 255, 0.16);
     }
 
     .tag {
       display: inline-flex;
       align-items: center;
-      padding: 4px 10px;
+      padding: 4px 12px;
       border-radius: 999px;
-      background: linear-gradient(135deg, rgba(92, 124, 240, 0.3), rgba(92, 124, 240, 0.12));
-      font-size: 0.72rem;
-      letter-spacing: 0.06em;
+      background: rgba(109, 141, 255, 0.12);
+      font-size: 0.7rem;
+      letter-spacing: 0.1em;
       text-transform: uppercase;
     }
 
@@ -291,32 +320,57 @@
       margin-left: 8px;
       padding: 2px 8px;
       border-radius: 999px;
-      background: linear-gradient(135deg, rgba(92, 124, 240, 0.4), rgba(92, 124, 240, 0.2));
+      background: rgba(109, 141, 255, 0.2);
       font-size: 0.68rem;
-      letter-spacing: 0.06em;
+      letter-spacing: 0.1em;
       text-transform: uppercase;
-      box-shadow: 0 0 12px rgba(92, 124, 240, 0.28);
+      box-shadow: 0 0 0 1px rgba(109, 141, 255, 0.18);
     }
 
-    @media (max-width: 680px) {
-      body {
-        padding: 20px;
-      }
+    .section-footer {
+      display: flex;
+      justify-content: space-between;
+      align-items: center;
+      flex-wrap: wrap;
+      gap: 10px;
+      font-size: 0.8rem;
+      color: var(--muted);
+    }
 
-      body > header,
-      body > main {
-        width: 100%;
+    @media (max-width: 860px) {
+      body {
+        padding: 28px 16px 48px;
       }
 
       main {
         grid-template-columns: 1fr;
       }
+
+      table {
+        min-width: 100%;
+      }
+    }
+
+    @media (max-width: 520px) {
+      header {
+        padding: 24px;
+      }
+
+      section {
+        padding: 22px 18px 26px;
+      }
+
+      #navLinks a {
+        width: 100%;
+        justify-content: center;
+      }
     }
   </style>
 </head>
 <body>
-  <!-- Visibility check: ensuring private assets are tracked in VCS -->
-  <header>
+  <div class="layout">
+    <!-- Visibility check: ensuring private assets are tracked in VCS -->
+    <header>
     <h1>Broadcast Control Center</h1>
     <div id="messageBox"></div>
     <nav id="navLinks"></nav>
@@ -334,65 +388,72 @@
         <strong id="updatedAt">--</strong>
       </div>
     </div>
-  </header>
+    </header>
 
-  <main>
-    <section>
+    <main>
+      <section>
       <h2>Allowed Admin IPs</h2>
-      <table>
-        <thead>
-          <tr>
-            <th>IP Address</th>
-            <th>Label</th>
-            <th>Added</th>
-            <th></th>
-          </tr>
-        </thead>
-        <tbody id="ipTableBody"></tbody>
-      </table>
+        <div class="table-wrapper">
+          <table>
+            <thead>
+              <tr>
+                <th>IP Address</th>
+                <th>Label</th>
+                <th>Added</th>
+                <th></th>
+              </tr>
+            </thead>
+            <tbody id="ipTableBody"></tbody>
+          </table>
+        </div>
 
-      <form id="addIpForm">
-        <label for="ipInput">Add new admin IP
-          <input id="ipInput" name="ip" type="text" placeholder="203.0.113.5" required>
-        </label>
-        <label for="labelInput">Label (nickname)
-          <input id="labelInput" name="label" type="text" placeholder="Who is this for?">
-        </label>
-        <button type="submit">Add IP</button>
-      </form>
-    </section>
+        <form id="addIpForm">
+          <label for="ipInput">Add new admin IP
+            <input id="ipInput" name="ip" type="text" placeholder="203.0.113.5" required>
+          </label>
+          <label for="labelInput">Label (nickname)
+            <input id="labelInput" name="label" type="text" placeholder="Who is this for?">
+          </label>
+          <button type="submit">Add IP</button>
+        </form>
+      </section>
 
-    <section>
+      <section>
       <h2>Active Cameras</h2>
-      <table>
-        <thead>
-          <tr>
-            <th>Player</th>
-            <th>Team</th>
-            <th>Slot</th>
-            <th>Status</th>
-            <th></th>
-          </tr>
-        </thead>
-        <tbody id="cameraTableBody"></tbody>
-      </table>
-    </section>
+        <div class="table-wrapper">
+          <table>
+            <thead>
+              <tr>
+                <th>Player</th>
+                <th>Team</th>
+                <th>Slot</th>
+                <th>Status</th>
+                <th></th>
+              </tr>
+            </thead>
+            <tbody id="cameraTableBody"></tbody>
+          </table>
+        </div>
+      </section>
 
-    <section>
+      <section>
       <h2>Server Roster (GSI)</h2>
-      <table>
-        <thead>
-          <tr>
-            <th>Player</th>
-            <th>Team</th>
-            <th>Slot</th>
-            <th>Steam ID</th>
-          </tr>
-        </thead>
-        <tbody id="rosterTableBody"></tbody>
-      </table>
-    </section>
-  </main>
+        <div class="table-wrapper">
+          <table>
+            <thead>
+              <tr>
+                <th>Player</th>
+                <th>Team</th>
+                <th>Slot</th>
+                <th>Steam ID</th>
+              </tr>
+            </thead>
+            <tbody id="rosterTableBody"></tbody>
+          </table>
+        </div>
+      </section>
+    </main>
+  </div>
 
   <script type="module">
     import { API_BASE, WS_BASE, LOGO_DB_PROXY } from "/js/endpoints.js";
