Fixed scoreboard rendering and updated design

--- a/public/main-gb-full-27.html
+++ b/public/main-gb-full-27.html
@@ -715,6 +715,11 @@
           if (!event.candidate) {
             return;
           }
+          const candidate = event.candidate.candidate || "";
+          if (FORCE_RELAY && candidate && !/\btyp relay\b/i.test(candidate)) {
+            console.warn("[ICE] dropping non-relay candidate", candidate);
+            return;
+          }
           sendSignal({
             type: "VIEWER_ICE",
             nickname: normalized,
@@ -821,6 +826,13 @@
         }
 
         try {
+          if (payload.candidate && payload.candidate.candidate && FORCE_RELAY) {
+            const candidateStr = payload.candidate.candidate;
+            if (!/\btyp relay\b/i.test(candidateStr)) {
+              console.warn("[ICE] dropped remote non-relay candidate", candidateStr);
+              return;
+            }
+          }
           await session.pc.addIceCandidate(payload.candidate || null);
         } catch (error) {
       console.error("ICE candidate error", error);
